# hopper-gen

./: .env.example  .gitignore  README.md  package.json  pyproject.toml
app/: globals.css  layout.tsx  page.tsx
app/api/generate/: route.ts
app/api/publish/: route.ts
app/artwork/[slug]/: page.tsx
app/artwork/[slug]/image/: route.ts
app/generate/[generationId]/: page.tsx
app/paper/: page.tsx
components/: homepage-client.tsx  publish-form.tsx
data/: captions.jsonl  paintings_metadata.json
db/: schema.sql
docs/: ADJUSTMENTS.md  blog-serving-finetuned-model.html  hopper-style.md  paper-hopper-options.md  results.md  training-config.md  training-log.md
docs/perf/: inference-recap.md
lib/: config.ts  date.ts  db.ts  modal.ts  prefix.ts  types.ts
notes/: sdxl_training.md  snapshot_optimization.md
outputs/: optimization_log.md
scripts/: benchmark_inference.py  class_generate.py  collect_images.py  debug_lora.py  evaluate.py  generate.py  plot_inference_recap.py  prepare_data.py  run_generate.py  test_compile.py  train.py  validate_inference.py  web_api.py
tests/: prefix.test.ts
